[feat] 홈 프로필 이름 수정 API 구현 (#435)
* docs: 홈 프로필 이름 수정 API 명세 추가

* docs: 사용자 이름 수정 길이 정책 ADR 추가

* feat: 사용자 이름 수정 도메인 규칙 추가

* feat: 홈 프로필 이름 수정 서비스 추가

* feat: 홈 프로필 이름 수정 API 연결

* test: 홈 프로필 이름 수정 API 인수 테스트 추가

* fix: 홈 프로필 이름 수정 요청 DTO에서 이미지 필드 제거

* docs: 홈 프로필 이름 수정 API 상태를 review로 변경

* docs: 홈 프로필 이름 수정 API 상태를 done 변경
